# copyrite-snapshots

./: CHANGES  COPYING  MANIFEST  Makefile  README  aclocal.m4  configure  configure.in  descrip.mms  install-sh  makefile.in  mkdirs.sh
certify/: Makefile  README  config.txt  makefile.in  release.txt
package/: copyrite-12.0.spec
package/debian/: changelog  control  copyright  rules  watch
src/: Makefile  cleanup.c  copyrite.c  copyrite.h  copyrite.txt  descrip.mms  format.c  hasident.c  insertat.c  makefile.in  maskit.c  parse.c  readit.c  removeit.c  superced.c
test/: Makefile  descrip.mms  makefile.in  run_test.com  run_test.sh  test.ada  test.c  test.com  test.ftn  test.sh  test.txt  test.y  test0.c  test1.c  test2.c  test3.c  test4.c  unix_c.ref  unix_sw72.ref  unix_w72.ref  unx_c.ref  unx_sw72.ref  unx_w72.ref  vms_c.ref  vms_sw72.ref  vms_w72.ref
user/: Makefile  copyrite.man  makefile.in
