dnl Process this file with 'autoconf' to produce a 'configure' script
dnl $Id: configure.in,v 5.6 2020/12/07 00:16:37 tom Exp $
AC_REVISION($Revision: 5.6 $)
AC_PREREQ(2.13.20030927)
AC_INIT(src/copyrite.h)
CF_CHECK_CACHE

###	get special options

CF_WITHOUT_X

###	program paths
CF_PROG_CC
AC_PROG_CPP
AC_PROG_AWK
AC_PROG_INSTALL
AC_PROG_MAKE_SET

###	extra things that we'll substitute in the makefile
CF_DISABLE_ECHO
CF_LIB_PREFIX
CF_FIND_TDLIB
CF_MAKE_INCLUDE

###	use option -with-warnings to turn on all gcc warnings
CF_ENABLE_WARNINGS

### Compiler characteristics

### Headers

### DataTypes

### DataItems/Structs

### Program locations

AC_OUTPUT( \
	makefile \
	src/makefile \
	test/makefile \
	user/makefile,[],[
	cf_cv_ar_rules="$cf_cv_ar_rules"
	make_include_left="$make_include_left"
	make_include_right="$make_include_right"
])
